# dungeon

./: Dockerfile-recommender  Dockerfile-server  README.md  dev.sh  docker-compose.yml
db/: init.sql
recommender/: recommender.py  requirements.txt  server.py
server/: Cargo.toml
server/src/: main.rs
server/src/api/: auth.rs  mod.rs  pages.rs  tasks.rs  token.rs
server/src/entities/: invite.rs  mod.rs  task.rs  user.rs
server/src/libs/: ai.rs  auth.rs  db.rs  mod.rs
server/static/templates/: base.html  guideInn.html  guideQuestboard.html  guideShelter.html  guideStart.html  header.html  inn.html  questBoard.html  shelter.html  signin.html  signout.html  signup.html  welcome.html
