[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
lazy_static = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }
cookie = "0.18.1"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
argon2 = "0.5.3"
tera = "1.20.0"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs"] }
axum-login = "0.16.0"
async-trait = "0.1.83"
tokio-postgres = "0.7.12"
password-auth = "1.0.0"
thiserror = "1.0.64"
serde_json = "1.0.128"
serde = "1.0.210"
nanoid = "0.4.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde_tuple = "1.0.0"
